--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
       </div>
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+        <div class="navbar-extra">
+          <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+        </div>
       </div>
     </nav>
     <!-- navbar end -->
@@ -197,3 +199,4 @@
   </body>
 </html>
 
+<!-- fungsi id untuk membalikan ke tab  -->
